@@ -1,3 +1,12 @@
+2006-06-10  Ulrich Drepper  <drepper@redhat.com>
+
+	* ld.c (parse_z_option): Recognize execstack and noexecstack.
+	* ld.h (struct ld_state): Add execstack field.
+	* ldgeneric.c (add_relocatable_file): Recognize .note.GNU-stack
+	sections.
+	(ld_generic_create_outfile): Fix program header creation in native
+	linker.  Add PT_GNU_STACK program header.
+
 2006-06-09  Ulrich Drepper  <drepper@redhat.com>
 
 	* i386_ld.c (elf_i386_finalize_plt): Don't change symbol table entries
